2001-04-04  Roland McGrath  <roland@frob.com>

	* ddb/db_access.h: Fix obsolescent #else/#endif syntax.
	* ddb/db_aout.c: Likewise.
	* ddb/db_break.c: Likewise.
	* ddb/db_break.h: Likewise.
	* ddb/db_command.c: Likewise.
	* ddb/db_command.h: Likewise.
	* ddb/db_cond.c: Likewise.
	* ddb/db_examine.c: Likewise.
	* ddb/db_expr.c: Likewise.
	* ddb/db_ext_symtab.c: Likewise.
	* ddb/db_input.c: Likewise.
	* ddb/db_lex.c: Likewise.
	* ddb/db_macro.c: Likewise.
	* ddb/db_mp.c: Likewise.
	* ddb/db_output.c: Likewise.
	* ddb/db_print.c: Likewise.
	* ddb/db_run.c: Likewise.
	* ddb/db_sym.c: Likewise.
	* ddb/db_task_thread.c: Likewise.
	* ddb/db_task_thread.h: Likewise.
	* ddb/db_trap.c: Likewise.
	* ddb/db_variables.c: Likewise.
	* ddb/db_watch.c: Likewise.
	* ddb/db_watch.h: Likewise.
	* ddb/db_write_cmd.c: Likewise.
	* device/dev_pager.c: Likewise.
	* device/device_port.h: Likewise.
	* device/device_types_kernel.h: Likewise.
	* device/ds_routines.h: Likewise.
	* device/errno.h: Likewise.
	* device/if_ether.h: Likewise.
	* device/if_hdr.h: Likewise.
	* device/io_req.h: Likewise.
	* device/net_io.c: Likewise.
	* device/net_io.h: Likewise.
	* i386/i386/ast_check.c: Likewise.
	* i386/i386/cswitch.S: Likewise.
	* i386/i386/db_disasm.c: Likewise.
	* i386/i386/db_interface.c: Likewise.
	* i386/i386/db_trace.c: Likewise.
	* i386/i386/debug.h: Likewise.
	* i386/i386/debug_i386.c: Likewise.
	* i386/i386/debug_trace.S: Likewise.
	* i386/i386/eflags.h: Likewise.
	* i386/i386/gdt.h: Likewise.
	* i386/i386/hardclock.c: Likewise.
	* i386/i386/idt-gen.h: Likewise.
	* i386/i386/ipl.h: Likewise.
	* i386/i386/ktss.h: Likewise.
	* i386/i386/kttd_interface.c: Likewise.
	* i386/i386/ldt.h: Likewise.
	* i386/i386/lock.h: Likewise.
	* i386/i386/locore.S: Likewise.
	* i386/i386/mp_desc.h: Likewise.
	* i386/i386/pic.c: Likewise.
	* i386/i386/pic.h: Likewise.
	* i386/i386/pio.h: Likewise.
	* i386/i386/pit.h: Likewise.
	* i386/i386/seg.h: Likewise.
	* i386/i386/thread.h: Likewise.