@@ -85,7 +85,7 @@ u_short divisorreg[] = {
 	857,	 768,	 576,	 384,	 192,	/*   134.5, 150,   200,   300,   600*/
 	 96,	  64,		  48,		/*  1200,  1800,  2000,  2400 */
       		  24,	  	  12,		/*  3600,  4800,  7200,  9600 */
-	  6,	   3,	   2};			/* 19200, 38400, 56000 */
+	6,	   3,	   2,	   1};		/* 19200, 38400, 56000,115200 */
 
 
 /*
